Refactor ResponseEntity