@@ -24,6 +24,7 @@ import com.nocountry.quo.model.Transaction.TransactionResponseDto;
 import com.nocountry.quo.model.User.User;
 import com.nocountry.quo.repository.PortfolioRepository;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.*;
 
 @Service
@@ -50,61 +51,57 @@ Representa el balance y la tenencia de activos
         return new ExchangeRates(LocalDate.now(), dto.conversion_rates());
     }
 
-    public List<TransactionResponseDto> getAllTransactions(UserDetails userDetails) {
+    private Portfolio getAuthenticatedPortfolio(UserDetails userDetails) {
         Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found for user: " + userId));
+        return portfolioRepository.findByUserId(userId)
+            .orElseThrow(() -> new EntityNotFoundException("Portfolio not found for user: " + userId));
+    }
+
+    public List<TransactionResponseDto> getAllTransactions(UserDetails userDetails) {
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
         return portfolio.getTransactions().stream()
             .map(TransactionResponseDto::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Double getAssetBalance(AssetSymbol assetSymbol, UserDetails userDetails) {
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found for user: " + userId));
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
         return portfolio.getTransactions().stream()
             .filter(t -> t.getAsset().equals(assetSymbol))
             .mapToDouble(t -> t.getType() == TransactionType.BUY ? t.getQuantity() : -t.getQuantity())
             .sum();
     }
-    
+
     public AssetDetailDto getAssetDetail(AssetSymbol assetSymbol, UserDetails userDetails) {
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found for user: " + userId));
-        
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
+
         List<Transaction> assetTransactions = portfolio.getTransactions().stream()
             .filter(t -> t.getAsset().equals(assetSymbol))
             .toList();
-        
+
         double balance = assetTransactions.stream()
             .mapToDouble(t -> t.getType() == TransactionType.BUY ? t.getQuantity() : -t.getQuantity())
             .sum();
-        
+
         List<TransactionResponseDto> responseDtos = assetTransactions.stream()
             .map(TransactionResponseDto::new)
             .toList();
-        
+
         return new AssetDetailDto(assetSymbol, balance, responseDtos);
     }
 
     public PerformanceDto getPerformance(UserDetails userDetails) {
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found"));
-
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
         double usdBalance = portfolio.getBalance();
 
-        // Get current prices
-        List<CoinsResponseDto> coins = apiService.getCryptoData().getBody();
+        List<CoinsResponseDto> coins = apiService.getCryptoData();
         Map<AssetSymbol, Double> currentPrices = coins.stream()
             .filter(c -> {
                 try {
                     AssetSymbol.fromString(c.symbol());
                     return c.currentPrice() != null;
                 } catch (IllegalArgumentException e) {
-                    return false; // skip unknown symbols
+                    return false;
                 }
             })
             .collect(Collectors.toMap(
@@ -112,16 +109,12 @@ Representa el balance y la tenencia de activos
                 CoinsResponseDto::currentPrice
             ));
 
-        // Calculate current crypto value
         Map<AssetSymbol, Double> holdings = portfolio.getTransactions().stream()
             .collect(Collectors.groupingBy(Transaction::getAsset,
                 Collectors.summingDouble(t -> t.getType() == TransactionType.BUY ? t.getQuantity() : -t.getQuantity())));
 
         double cryptoValue = holdings.entrySet().stream()
-            .mapToDouble(entry -> {
-                double price = currentPrices.getOrDefault(entry.getKey(), 0.0);
-                return price * entry.getValue();
-            })
+            .mapToDouble(entry -> currentPrices.getOrDefault(entry.getKey(), 0.0) * entry.getValue())
             .sum();
 
         double totalValue = usdBalance + cryptoValue;
@@ -137,70 +130,41 @@ Representa el balance y la tenencia de activos
     }
 
     @Transactional
-    public void buyAsset(AssetSymbol asset, double quantity, double priceAtTransaction, UserDetails userDetails) {
+    public void buyAsset(AssetSymbol asset, double quantity, double price, UserDetails userDetails) {
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
         ExchangeRates exchangeRates = getExchangeRatesFromService();
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found"));
 
-        double totalCost = quantity * priceAtTransaction;
+        double totalCost = quantity * price;
         if (portfolio.getBalance() < totalCost) {
             throw new IllegalArgumentException("Insufficient USD balance to buy " + asset);
         }
 
         portfolio.setBalance(portfolio.getBalance() - totalCost);
-
-        Transaction tx = new Transaction(
-            portfolio,
-            TransactionType.BUY,
-            asset,
-            quantity,
-            priceAtTransaction,
-            LocalDateTime.now(),
-            exchangeRates
-        );
-
+        Transaction tx = new Transaction(portfolio, TransactionType.BUY, asset, quantity, price, LocalDateTime.now(), exchangeRates);
         portfolio.getTransactions().add(tx);
         portfolioRepository.save(portfolio);
     }
 
     @Transactional
-    public void sellAsset(AssetSymbol asset, double quantity, double priceAtTransaction, UserDetails userDetails) {
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found"));
-    
+    public void sellAsset(AssetSymbol asset, double quantity, double price, UserDetails userDetails) {
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
+
         double assetHolding = getAssetBalance(asset, userDetails);
         if (assetHolding < quantity) {
             throw new IllegalArgumentException("Insufficient " + asset + " to sell. Current holding: " + assetHolding);
         }
-    
-        double totalProceeds = quantity * priceAtTransaction;
-        portfolio.setBalance(portfolio.getBalance() + totalProceeds);
-    
+
+        portfolio.setBalance(portfolio.getBalance() + quantity * price);
         ExchangeRates exchangeRates = getExchangeRatesFromService();
-    
-        Transaction tx = new Transaction(
-            portfolio,
-            TransactionType.SELL,
-            asset,
-            quantity,
-            priceAtTransaction,
-            LocalDateTime.now(),
-            exchangeRates
-        );
-    
+        Transaction tx = new Transaction(portfolio, TransactionType.SELL, asset, quantity, price, LocalDateTime.now(), exchangeRates);
         portfolio.getTransactions().add(tx);
         portfolioRepository.save(portfolio);
     }
 
     public PortfolioOverviewDto getPortfolioOverview(UserDetails userDetails) {
-        Long userId = ((User) userDetails).getId();
-        Portfolio portfolio = portfolioRepository.findByUserId(userId)
-            .orElseThrow(() -> new RuntimeException("Portfolio not found"));
-    
-        List<CoinsResponseDto> coins = apiService.getCryptoData().getBody();
-    
+        Portfolio portfolio = getAuthenticatedPortfolio(userDetails);
+        List<CoinsResponseDto> coins = apiService.getCryptoData();
+
         Map<AssetSymbol, Double> currentPrices = coins.stream()
             .filter(c -> {
                 try {
@@ -214,29 +178,28 @@ Representa el balance y la tenencia de activos
                 c -> AssetSymbol.fromString(c.symbol()),
                 CoinsResponseDto::currentPrice
             ));
-    
+
         Map<AssetSymbol, Double> holdings = portfolio.getTransactions().stream()
             .collect(Collectors.groupingBy(Transaction::getAsset,
                 Collectors.summingDouble(t -> t.getType() == TransactionType.BUY ? t.getQuantity() : -t.getQuantity())));
-    
+
         Map<AssetSymbol, Double> holdingValues = holdings.entrySet().stream()
             .collect(Collectors.toMap(
                 Map.Entry::getKey,
                 e -> currentPrices.getOrDefault(e.getKey(), 0.0) * e.getValue()
             ));
-    
+
         double cryptoValue = holdingValues.values().stream().mapToDouble(Double::doubleValue).sum();
         double totalValue = portfolio.getBalance() + cryptoValue;
-    
+
         double totalInvested = portfolio.getTransactions().stream()
             .filter(t -> t.getType() == TransactionType.BUY)
             .mapToDouble(t -> t.getPriceAtTransaction() * t.getQuantity())
             .sum();
-    
+
         double profitLoss = totalValue - totalInvested;
         double profitLossPercentage = (totalValue - 1000.0) / 1000.0 * 100;
 
-    
         return new PortfolioOverviewDto(
             portfolio.getBalance(),
             holdings,
